<resources>
    <string name="app_name">Library</string>
    <string name="not_found">No encontrado</string>

    <string name="title_label">Titulo: %1$s</string>
    <string name="author_label">Autor: %1$s</string>
    <string name="category_label">Categoría: %1$s</string>
    <string name="date_label">Fecha de publicación: %1$s</string>
    <string name="publisher_label">Editorial: %1$s</string>
    <string name="page_number_label">Número de páginas: %1$s</string>
    <string name="isbn_label">Isbn: %1$s</string>
    <string name="description_label">Descripción:</string>

    <string name="ok">OK</string>

    <string name="network_error_message">Error al descargar libros de internet</string>
    <string name="storage_error_message">Error al consultar libros de base de datos local</string>
    <string name="add_book_network_error">Error al enviar nuevo libro</string>

    <string name="unknown_error">Error desconocido</string>
    <string name="unknown_network_error">Error de red desconocido</string>

    <string name="search_hint">Buscar libro</string>


    <!-- Add book labels-->
    <string name="add_book">Agregar libro</string>
    <string name="title">Titulo</string>
    <string name="author">Autor</string>
    <string name="category">Categoría</string>
    <string name="date">Fecha de publicación</string>
    <string name="publisher">Editorial</string>
    <string name="page_number">Número de páginas</string>
    <string name="isbn">Isbn</string>
    <string name="description">Descripción</string>
    <string name="img_url">Url de imagen</string>

    <string name="book_addition_success">El libro fue agregado con exito</string>
    <string name="wrong_isbn">ISBN obligatorio y no puede ser de menos de 10 caracteres</string>

    <!-- Delete book -->
    <string name="delete_book_message">¿Seguro que quieres borrar este libro?</string>
    <string name="cancel">Cancelar</string>

    <string name="delete_book_network_error">Sucedió un error al intentar borrar el libro en el servidor</string>
    <string name="delete_book_storage_error">Sucedio un error al intentar borrar el libro de la base datos local</string>
</resources>